# msg

./: .dockerignore  .gitattributes  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: tech-lead.md  ui-engineer.md
.claude/chat/: eng-56-hashing.md  eng-62-exit-gate.md  eng-66-upload.md  eng-67-pull-sync.md  eng-71-simulation.md  eng-72-compose.md  eng-73-exit-gate.md  eng-79-sync-engine.md  eng-80-client-projections.md  eng-83-acceptance-architecture.md
.github/workflows/: ci.yml
cli/msgctl/: append.py  cli.py  client.py  remote.py  sync.py  verify.py  workspace.py
cli/tests/: _e2e_server.py  test_client.py  test_concurrency.py  test_export_e2e.py  test_remote_sync.py  test_send.py  test_setup_general_e2e.py  test_torn_write.py  test_verify.py  test_verify_bundle_e2e.py  verify_helpers.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: blobs.rs  config.rs  fsutil.rs  main.rs  manifest.rs  ndjson.rs  secret.rs  sqlite.rs
docs/: deploy.md  design-doc.md  tech-lead-assessment.md  technical-design.md
docs/schemas/: message.deleted.v1.schema.json  message.edited.v1.schema.json  reaction.added.v1.schema.json  reaction.removed.v1.schema.json
plugins/: README.md
plugins/examples/: echo_bot.py
plugins/msg_sdk/: pyproject.toml
plugins/msg_sdk/msg_sdk/: __init__.py  client.py  errors.py  hashing.py  jcs.py
plugins/msg_sdk/tests/: conftest.py  test_sdk_client_unit.py  test_sdk_e2e.py  test_sdk_hashing_vectors.py  test_sdk_ids.py  test_sdk_isolation.py
server/msgd/: settings.py
server/msgd/api/: app.py  deps.py
server/tests/: authutil.py  eventsutil.py  generate_vectors.py  test_admin_members.py  test_admin_workspace.py  test_edits_deletes.py  test_envelope.py  test_equivalence_gate_server.py  test_events_batch.py  test_events_validate.py  test_export.py  test_files.py  test_hashing.py  test_hooks.py  test_invites.py  test_payloads.py  test_schemas.py  test_setup_streams.py  test_sync.py  test_threads.py  test_vectors.py  test_whoami.py  test_ws.py
web/: package.json  pnpm-lock.yaml
(+136 files in other folders)
